ConsoleInput and AddItemService development